--- a/baeminfresh-api/src/main/resources/messages_ko_KR.properties
+++ b/baeminfresh-api/src/main/resources/messages_ko_KR.properties
@@ -3,9 +3,8 @@ error.404=서버가 요청한 자원을 찾을 수 없다.
 error.500=서버에 오류가 발생하여 요청을 수행할 수 없다.
 
 
+NotNull={0}는 필수 입력값입니다.
 NotEmpty={0}는 필수 입력값입니다.
 
-NotNull.topicForm.category=카테고리(category)는 필수 입력값 입니다.
-NotEmpty.topicForm.title=제목(title)은 필수 입력값 입니다.
-NotEmpty.topicForm.author=작성자(author)는 필수 입력값 입니다.
-NotEmpty.topicForm.password=비밀번호(password)는 필수 입력값 입니다.
+Size.writeTopic.password=비밀번호(password)는 최소 4자리 이상 값을 입력해야합니다.
+NotEmpty.writeTopic.password=비밀번호(password)는 필수 입력값 입니다.
